--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,6 +24,29 @@ clean-targets:         # directories to be removed by `dbt clean`
     - "target"
     - "dbt_modules"
 
+name: 'codegen'
+version: '1.0'
+
+require-dbt-version: ">=0.17.0"
+config-version: 2
+
+target-path: "target"
+clean-targets: ["target", "dbt_modules"]
+macro-paths: ["macros"]
+log-path: "logs"
+
+name: 'audit_helper'
+version: '1.0'
+config-version: 2
+
+require-dbt-version: ">=0.17.0"
+
+target-path: "target"
+clean-targets: ["target", "dbt_modules"]
+macro-paths: ["macros"]
+log-path: "logs"
+
+
 models:
   zendesk:
     stitch:
