--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,3 @@
 packages:
-    - git:  https://docs.getdbt.com/docs/package-management
-      revision: master
+    - package: fishtown-analytics/dbt_utils
+      version: [">=0.2.4", "<0.5.0"]
