added test to customer key column

--- a/models/staging/tpch/src_tpch.yml
+++ b/models/staging/tpch/src_tpch.yml
@@ -8,6 +8,10 @@ sources:
       - name: customer
         columns:
           - name: c_custkey
+            description: unique customer key
+            tests:
+              - unique
+              - not_null
           - name: c_name
           - name: c_address
           - name: c_nationkey
