--- a/models/staging/tpch/src_tpch.yml
+++ b/models/staging/tpch/src_tpch.yml
@@ -10,8 +10,10 @@ sources:
           - name: c_custkey
             description: unique customer key
             tests:
-              - unique
-              - not_null
+              - unique:
+                  severity: warn
+              - not_null:
+                  severity: warn
           - name: c_name
           - name: c_address
           - name: c_nationkey
@@ -32,6 +34,7 @@ sources:
           - name: l_partkey
             description:  Foreign key to P_PARTKEY, first part of the compound Foreign Key to (PS_PARTKEY,PS_SUPPKEY) with L_SUPPKEY
           - name: l_suppkey
+            description: Foreign key to S_SUPPKEY, second part of the compound Foreign Key to (PS_PARTKEY, PS_SUPPKEY) with L_PARTKEY
           - name: l_linenumber
           - name: l_quantity
           - name: l_extendedprice
@@ -49,14 +52,28 @@ sources:
       - name: nation
         columns:
           - name: n_nationkey
+            description: 25 nations are populated
+            tests:
+              - unique:
+                  severity: warn
+              - not_null:
+                  severity: warn
           - name: n_name
           - name: n_regionkey
+            description: Foreign Key to R_REGIONKEY
           - name: n_comment
 
       - name: orders
         columns:
           - name: o_orderkey
+            description: SF*1,500,000 are sparsely populated
+            tests: 
+              - unique:
+                  severity: warn
+              - not_null:
+                  severity: warn
           - name: o_custkey
+            description: Foreign Key to C_CUSTKEY
           - name: o_orderstatus
           - name: o_totalprice
           - name: o_orderdate
@@ -68,6 +85,12 @@ sources:
       - name: part
         columns:
           - name: p_partkey
+            description: SF*200,000 are populated
+            tests:
+              - unique:
+                  severity: warn
+              - not_null:
+                  severity: warn
           - name: p_name
           - name: p_mfgr
           - name: p_brand
@@ -80,7 +103,14 @@ sources:
       - name: partsupp
         columns:
           - name: ps_partkey
+            description: Foreign Key to P_PARTKEY
+            tests:
+              - unique:
+                  severity: warn
+              - not_null:
+                  severity: warn
           - name: ps_suppkey
+            description: Foreign Key to S_SUPPKEY
           - name: ps_availqty
           - name: ps_supplycost
           - name: ps_comment
@@ -88,15 +118,28 @@ sources:
       - name: region
         columns:
           - name: r_regionkey
+            description: 5 regions are populated
+            tests:
+              - unique:
+                  severity: warn
+              - not_null:
+                  severity: warn
           - name: r_name
           - name: r_comment
 
       - name: supplier
         columns:
           - name: s_suppkey
+            description: SF*10,000 are populated
+            tests:
+              - unique:
+                  severity: warn
+              - not_null:
+                  severity: warn
           - name: s_name
           - name: s_address
           - name: s_nationkey
+            description: Foreign Key to N_NATIONKEY
           - name: s_phone
           - name: s_acctbal
           - name: s_comment
