--- a/models/staging/external_stage/src_external_stage.yml
+++ b/models/staging/external_stage/src_external_stage.yml
@@ -6,21 +6,16 @@ sources:
     database: raw
     schema: jaffle_shop
     loader: S3
-    loaded_at_field: collector_hour
-  
+    
     tables:
       - name: customers
         external:
-          location: "s3://dbt-tutorial-test/customers.csv"
-          file_format: "( type = csv )"
-          auto_refresh: true
-          partitions:
-            - name: collector_hour
-              data_type: timestamp
-              expression: to_timestamp(substr(metadata$filename, 8, 13), 'YYYY/MM/DD/HH24')
+          location: '@raw.jaffle_shop'
+          file_format: "(type = csv )"
+          auto_refresh: false
         columns:
           - name: id
-            data_type: integer
+            data_type: int
             description: "Customer ID"
           - name: first_name
             data_type: varchar
@@ -28,21 +23,37 @@ sources:
           - name: last_name
             data_type: varchar
             description: "Last name of customer" 
-      - name: orders
+          - name: email
+            data_type: varchar
+      - name: payments
         external:
-            location: "s3://dbt-tutorial-test/orders.csv"
-            file_format: "( type = csv )"
-            auto_refresh: true
-            partitions:
-              - name: hour
-                data_type: timestamp
-                expression: to_timestamp(substr(metadata$filename, 8, 13), 'YYYY/MM/DD/HH24')
+          location: '@raw.jaffle_shop'
+          file_format: "( type = csv)"
+          auto_refresh: true
         columns:
           - name: id
-            data_type: integer
+            data_type: int
+            description: "payment id"
+          - name: order_id
+            data_type: int
+            description: "payment order id"
+          - name: payment_method
+            data_type: varchar
+            description: "customer payment method"
+          - name: ammount
+            data_type: int
+            description: "payment ammount"
+      - name: orders
+        external: 
+            location: '@raw.jaffle_shop'
+            file_format: "( type = csv DATE_FORMAT = auto)"
+            auto_refresh: false
+        columns:
+          - name: id
+            data_type: int
             description: "Order ID"
           - name: user_id
-            data_type: integer
+            data_type: int
             description: "User id for the order"
           - name: order_date
             data_type: date
