--- a/packages.yml
+++ b/packages.yml
@@ -2,4 +2,6 @@ packages:
   - package: fishtown-analytics/codegen
     version: 0.1.0
   - package: fishtown-analytics/dbt_utils
-    version: ["<0.5.0"]    
+    version: ">=0.4.0"  
+  - package: fishtown-analytics/dbt_external_tables
+    version: 0.4.0
